logs/Slang/generic/member/class_member_test_58.sv.log
name: class_member_test_58
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:7:1: error: language feature not yet supported
class myclass extends uvm_object;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:12: error: expected expression
  solve x.z, f, g before q, r, y.x;
           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:13: error: expected ','
  solve x.z, f, g before q, r, y.x;
            ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:15: error: expected expression
  solve x.z, f, g before q, r, y.x;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:16: error: expected ','
  solve x.z, f, g before q, r, y.x;
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:27: error: expected expression
  solve x.z, f, g before q, r, y.x;
                          ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:28: error: expected ','
  solve x.z, f, g before q, r, y.x;
                           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:30: error: expected expression
  solve x.z, f, g before q, r, y.x;
                             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:11:31: error: expected ','
  solve x.z, f, g before q, r, y.x;
                              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:15: error: expected expression
  solve x.z[2], f[1], g before q, r[4], y[3].x;
              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:16: error: expected ','
  solve x.z[2], f[1], g before q, r[4], y[3].x;
               ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:21: error: expected expression
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                    ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:22: error: expected ','
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                     ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:33: error: expected expression
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                                ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:34: error: expected ','
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:39: error: expected expression
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                                      ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_58.sv:12:40: error: expected ','
  solve x.z[2], f[1], g before q, r[4], y[3].x;
                                       ^
